# TR4-Kindlevin

./: .gitignore  README.md
RocketPy/: RocketPy-README.md  TR4 - Test.py  powerOffDragCurve(OpenRocket).csv  powerOnDragCurve(OpenRocket).csv
RocketPy/RocketPyTest/: AirbreaksDataTest.py  Find Folder.py  FlightSim.py  NACA0012-radians.txt.txt  README.md  air_brakes_cd.csv  powerOnDragCurve.csv
TR3V4_Kicad/: TR3V4.kicad_pcb  TR3V4.kicad_prl  TR3V4.kicad_pro  TR3V4.kicad_sch  TR3_V1.kicad_sym  _autosave-TR3V1.kicad_prl  _autosave-TR3V1.kicad_pro  _autosave-TR3V3.kicad_pcb  fp-lib-table  sym-lib-table
TR3V4_Kicad/FootprintsV1.1.5.pretty/: 150080RS75000_WRE.kicad_mod  5186_footprint_N.kicad_mod  ADXL375BCCZ_footprint_N.kicad_mod  Antenna.kicad_mod  BAT_BK-885.kicad_mod  CAP_CL05_SAM.kicad_mod  COM-13909_footprint_N.kicad_mod  CP_Radial_D10.0mm_P5.00mm.kicad_mod  C_0805_2012Metric.kicad_mod  C_1206_3216Metric.kicad_mod  ESP32-WROOM-32E.kicad_mod  FT231XQ-R_footprint_N.kicad_mod  (+17 more)
flight-computer/: TR4FlightComputerV1 (1).ino
flight-computer/esp-idf-port/main/: CMakeLists.txt  errors.h  logger.cpp  logger.h  main.cpp  sd.cpp  sd.h  utils.h
flight-computer/esp-idf-port/main/computer/: computer.cpp  computer.h
flight-computer/esp-idf-port/main/i2c/: BMI323.cpp  BMI323.h  BMP581.cpp  BMP581.h  I2C.cpp  I2C.h  ICM20948.h  ICM20984.cpp  MLX90395.cpp  MLX90395.h  TMP1075.cpp  TMP1075.h  high_g_accel.cpp  high_g_accel.h  segment7.cpp  segment7.h
flight-computer/esp-idf-port/main/task/: i2c.cpp  i2c.h
flight-computer/esp-idf-port/main/uart/: uart.cpp  uart.h
(+87 files in other folders)
